feat: update polish translations for consistency and accuracy
Signed-off-by: mqsaya <yamqsaya@gmail.com>

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -9,7 +9,7 @@
   "routes.themes.name": "Motywy",
   "general.other": "Inne",
   "pages.home.hero.title": "Pobierz Freesm Launcher na",
-  "pages.home.hero.description": "Freesm Launcher to niestandardowy launcher do Minecrafta, który pozwala grać na koncie offline bez żadnych ograniczeń.",
+  "pages.home.hero.description": "Freesm Launcher jest to niestandardowy launcher do Minecrafta, który pozwala grać na koncie offline bez żadnych ograniczeń.",
   "pages.home.hero.download-now": "Pobierz teraz",
   "pages.home.features.more-auth-servers.title": "Więcej serwerów uwierzytelniania",
   "pages.home.features.more-auth-servers.description": "Korzystaj z kont offline bez ograniczeń lub z Ely.by i innych niestandardowych serwerów uwierzytelniających, aby grać w Minecrafta.",
@@ -19,16 +19,16 @@
   "pages.home.features.prism.description": "Freesm opiera się na kodzie Prism Launcher, więc możesz oczekiwać wszystkich jego funkcji, takich jak zarządzanie paczkami modów i instancjami.",
   "pages.home.features.other.title": "Inne funkcje",
   "pages.home.features.other.description": "Automatycznie kopiuj zrzuty ekranu z gry do historii schowka, pokazuj swoją obecną instancję na Discordzie, korzystaj ze skinów Ely.by wszędzie i wiele więcej!",
-  "pages.home.team.maintainers.title": "Współtwórcy",
+  "pages.home.team.maintainers.title": "Maintainers",
   "pages.home.team.maintainers.list.so5iso4ka.description": "C++ Enjoyer",
   "pages.home.team.maintainers.list.kaeeraa.description": "Problem-solver at heart, passionate about Linux (NixOS) and open-source apps.",
   "pages.home.team.maintainers.list.s0me1newithhand7s.description": "OSS Enthusiast, creator of the idea. Nix stuff maintainer also known as hand7s",
   "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
-  "pages.home.team.contributors.title": "Współpracownicy",
+  "pages.home.team.contributors.title": "Contributors",
   "pages.home.team.special.title": "Specjalne podziękowania",
   "footer.short-description": "Inny sposób na darmową grę w Minecrafta.",
   "footer.about.title": "O projekcie",
-  "footer.about.link.contribute": "Współtwórz",
+  "footer.about.link.contribute": "Contribute",
   "footer.about.link.faq": "FAQ",
   "footer.about.link.download": "Pobierz",
   "footer.community.title": "Społeczność",
@@ -49,7 +49,7 @@
   "launcher.manage-accounts": "Zarządzaj kontami...",
   "launcher.more-news": "Więcej wiadomości",
   "launcher.website-in-vue": "Ta strona została napisana na Vue <3",
-  "launcher.maintainer": "Współpracownik",
+  "launcher.maintainer": "Maintainer",
   "launcher.profile-hotkey": "Ctrl+0",
   "launcher.ungrouped": "Niezgrupowany",
   "launcher.placeholder-group": "Zastępniki",
