feat: improve Polish translations for clarity and consistency
Signed-off-by: mqsaya <yamqsaya@gmail.com>

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -9,14 +9,14 @@
   "routes.themes.name": "Motywy",
   "general.other": "Inne",
   "pages.home.hero.title": "Pobierz Freesm Launcher na",
-  "pages.home.hero.description": "Freesm Launcher jest to niestandardowy launcher do Minecrafta, który pozwala grać na koncie offline bez żadnych ograniczeń.",
+  "pages.home.hero.description": "Freesm Launcher to jest niestandardowy launcher do Minecrafta, który pozwala grać na koncie offline bez żadnych ograniczeń.",
   "pages.home.hero.download-now": "Pobierz teraz",
   "pages.home.features.more-auth-servers.title": "Więcej serwerów uwierzytelniania",
   "pages.home.features.more-auth-servers.description": "Korzystaj z kont offline bez ograniczeń lub z Ely.by i innych niestandardowych serwerów uwierzytelniających, aby grać w Minecrafta.",
   "pages.home.features.customization.title": "Personalizacja",
   "pages.home.features.customization.description": "Freesm Launcher posiada własny motyw w kolorach Catppuccin i ikonach Microsoft Fluent. Umożliwia także ustawianie animowanych paczek kotów z obsługą przycinania tła.",
   "pages.home.features.prism.title": "Na bazie Prism",
-  "pages.home.features.prism.description": "Freesm opiera się na kodzie Prism Launcher, więc możesz oczekiwać wszystkich jego funkcji, takich jak zarządzanie paczkami modów i instancjami.",
+  "pages.home.features.prism.description": "Freesm opiera się na kodzie Prism Launcher, więc możesz oczekiwać wszystkich jego funkcji, takich jak zarządzanie modpackami i instancjami.",
   "pages.home.features.other.title": "Inne funkcje",
   "pages.home.features.other.description": "Automatycznie kopiuj zrzuty ekranu z gry do historii schowka, pokazuj swoją obecną instancję na Discordzie, korzystaj ze skinów Ely.by wszędzie i wiele więcej!",
   "pages.home.team.maintainers.title": "Maintainers",
