feat: add initial faq page code

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -26,6 +26,7 @@
   "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
   "pages.home.team.contributors.title": "Contributors",
   "pages.home.team.special.title": "Specjalne podziękowania",
+  "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "Inny sposób na darmową grę w Minecrafta.",
   "footer.about.title": "O projekcie",
   "footer.about.link.contribute": "Contribute",
