--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -26,6 +26,7 @@
   "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
   "pages.home.team.contributors.title": "Внесли вклад",
   "pages.home.team.special.title": "Особая благодарность",
+  "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "Играйте в Майнкрафт без ограничений.",
   "footer.about.title": "О лаунчере",
   "footer.about.link.contribute": "Внести вклад",
