--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -26,6 +26,7 @@
   "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
   "pages.home.team.contributors.title": "Ті, хто зробили внесок",
   "pages.home.team.special.title": "Особлива подяка",
+  "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "Грайте в Minecraft без обмежень.",
   "footer.about.title": "Про лаунчер",
   "footer.about.link.contribute": "Зробити внесок",
