--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,6 +26,7 @@
   "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
   "pages.home.team.contributors.title": "Contributors",
   "pages.home.team.special.title": "Special Thanks",
+  "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "Another way to play Minecraft for free.",
   "footer.about.title": "About",
   "footer.about.link.contribute": "Contribute",
