--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -26,6 +26,7 @@
   "pages.home.team.maintainers.list.windstone.description": "عاشق Vue.js، Svelte 5 و Elysia.js <3",
   "pages.home.team.contributors.title": "مشارکت کنندگان",
   "pages.home.team.special.title": "با تشکر ویژه از",
+  "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "راهی دیگر برای بازی کردن ماینکرفت",
   "footer.about.title": "درباره",
   "footer.about.link.contribute": "مشارکت",
