feat(translations): change a line

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -23,7 +23,7 @@
   "pages.home.team.maintainers.list.so5iso4ka.description": "Любитель C++",
   "pages.home.team.maintainers.list.kaeeraa.description": "Страстный problem-solver, увлечён Linux (NixOS) и приложениями с открытым исходным кодом.",
   "pages.home.team.maintainers.list.s0me1newithhand7s.description": "OSS-энтузиаст, автор идеи. Мейнтейнер связанного с Nix контента, также известный как hand7s",
-  "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
+  "pages.home.team.maintainers.list.windstone.description": "Svelte/Vue.js & Elysia.js <3",
   "pages.home.team.contributors.title": "Внесли вклад",
   "pages.home.team.special.title": "Особая благодарность",
   "pages.faq.title": "Frequently Asked Questions",
