--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -23,7 +23,7 @@
   "pages.home.team.maintainers.list.so5iso4ka.description": "C++ Enjoyer",
   "pages.home.team.maintainers.list.kaeeraa.description": "Problem-solver at heart, passionate about Linux (NixOS) and open-source apps.",
   "pages.home.team.maintainers.list.s0me1newithhand7s.description": "OSS Enthusiast, creator of the idea. Nix stuff maintainer also known as hand7s",
-  "pages.home.team.maintainers.list.windstone.description": "Vue.js & Svelte 5 & Elysia.js <3",
+  "pages.home.team.maintainers.list.windstone.description": "Svelte/Vue.js & Elysia.js <3",
   "pages.home.team.contributors.title": "Contributors",
   "pages.home.team.special.title": "Specjalne podziękowania",
   "pages.faq.title": "Frequently Asked Questions",
