feat: implement initial downloads page structure

--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -26,6 +26,8 @@
   "pages.home.team.maintainers.list.windstone.description": "عاشق Vue.js، Svelte 5 و Elysia.js <3",
   "pages.home.team.contributors.title": "مشارکت کنندگان",
   "pages.home.team.special.title": "با تشکر ویژه از",
+  "pages.downloads.title": "Downloads",
+  "pages.downloads.description": "Download Freesm Launcher for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "راهی دیگر برای بازی کردن ماینکرفت",
   "footer.about.title": "درباره",
