--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,6 +26,8 @@
   "pages.home.team.maintainers.list.windstone.description": "Svelte/Vue.js & Elysia.js <3",
   "pages.home.team.contributors.title": "Contributors",
   "pages.home.team.special.title": "Special Thanks",
+  "pages.downloads.title": "Downloads",
+  "pages.downloads.description": "Download Freesm Launcher for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "Another way to play Minecraft for free.",
   "footer.about.title": "About",
