--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -26,6 +26,8 @@
   "pages.home.team.maintainers.list.windstone.description": "Svelte/Vue.js & Elysia.js <3",
   "pages.home.team.contributors.title": "Contributors",
   "pages.home.team.special.title": "Specjalne podziękowania",
+  "pages.downloads.title": "Downloads",
+  "pages.downloads.description": "Download Freesm Launcher for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "Inny sposób na darmową grę w Minecrafta.",
   "footer.about.title": "O projekcie",
