feat: make downloads page description dynamic

--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -27,7 +27,7 @@
   "pages.home.team.contributors.title": "Contributors",
   "pages.home.team.special.title": "Specjalne podziękowania",
   "pages.downloads.title": "Downloads",
-  "pages.downloads.description": "Download Freesm Launcher for your specific platform.",
+  "pages.downloads.description": "Download Freesm Launcher %s for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "Inny sposób na darmową grę w Minecrafta.",
   "footer.about.title": "O projekcie",
