--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -27,7 +27,7 @@
   "pages.home.team.contributors.title": "Ті, хто зробили внесок",
   "pages.home.team.special.title": "Особлива подяка",
   "pages.downloads.title": "Downloads",
-  "pages.downloads.description": "Download Freesm Launcher for your specific platform.",
+  "pages.downloads.description": "Download Freesm Launcher %s for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "Грайте в Minecraft без обмежень.",
   "footer.about.title": "Про лаунчер",
