--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -27,7 +27,7 @@
   "pages.home.team.contributors.title": "Внесли вклад",
   "pages.home.team.special.title": "Особая благодарность",
   "pages.downloads.title": "Downloads",
-  "pages.downloads.description": "Download Freesm Launcher for your specific platform.",
+  "pages.downloads.description": "Download Freesm Launcher %s for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "Играйте в Майнкрафт без ограничений.",
   "footer.about.title": "О лаунчере",
