feat: add initial code to fetch download links from github

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,7 +27,7 @@
   "pages.home.team.contributors.title": "Contributors",
   "pages.home.team.special.title": "Special Thanks",
   "pages.downloads.title": "Downloads",
-  "pages.downloads.description": "Download Freesm Launcher %s for your specific platform.",
+  "pages.downloads.description": "Download %s for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "Another way to play Minecraft for free.",
   "footer.about.title": "About",
