--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -27,7 +27,7 @@
   "pages.home.team.contributors.title": "مشارکت کنندگان",
   "pages.home.team.special.title": "با تشکر ویژه از",
   "pages.downloads.title": "Downloads",
-  "pages.downloads.description": "Download Freesm Launcher %s for your specific platform.",
+  "pages.downloads.description": "Download %s for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
   "footer.short-description": "راهی دیگر برای بازی کردن ماینکرفت",
   "footer.about.title": "درباره",
