--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,6 +29,23 @@
   "pages.downloads.title": "Downloads",
   "pages.downloads.description": "Download %s for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
+  "pages.faq.description": "A collection of helpful information for frequent problems when using Freesm Launcher.",
+  "pages.faq.issues.long-launch.title": "My instance takes so long to launch",
+  "pages.faq.issues.long-launch.description": "Try enabling or disabling your VPN or zapret. If it didn't work, try changing your Java vendor or version in settings.",
+  "pages.faq.issues.portable-zip.title": "'Java checker could not be found. Please check your installation'",
+  "pages.faq.issues.portable-zip.description": "Unzip your portable version of launcher",
+  "pages.faq.issues.optifine.title": "How to install OptiFine without launching the original Minecraft Launcher?",
+  "pages.faq.issues.optifine.description": "refer to https://www.reddit.com/r/Optifine/comments/jekh7u/comment/ipjqm5o/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button",
+  "pages.faq.issues.skins.title": "How to set your skin?",
+  "pages.faq.issues.skins.description": "",
+  "pages.faq.issues.microsoft-invalid-login.title": "https://t.me/freesmsupport/184",
+  "pages.faq.issues.microsoft-invalid-login.description": "your microsoft account doesn't have a bought minecraft. you need to use an 'Offline' option in account settings",
+  "pages.faq.issues.no-languages.title": "Why is there only an english language in the launcher?",
+  "pages.faq.issues.no-languages.description": "Try enabling or disabling your VPN or zapret",
+  "pages.faq.issues.cat-pack-quality.title": "My cat packs have a bit lower quality when using them in Freesm",
+  "pages.faq.issues.cat-pack-quality.description": "",
+  "pages.faq.issues.other.title": "Other issues",
+  "pages.faq.issues.other.description": "Check https://prismlauncher.org/wiki/overview/frequent-issues/ If nothing helped, try contacting us at discord or telegram",
   "footer.short-description": "Another way to play Minecraft for free.",
   "footer.about.title": "About",
   "footer.about.link.contribute": "Contribute",
