--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -29,6 +29,23 @@
   "pages.downloads.title": "Downloads",
   "pages.downloads.description": "Download %s for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
+  "pages.faq.description": "",
+  "pages.faq.issues.long-launch.title": "My instance takes so long to launch",
+  "pages.faq.issues.long-launch.description": "",
+  "pages.faq.issues.portable-zip.title": "'Java checker could not be found. Please check your installation'",
+  "pages.faq.issues.portable-zip.description": "",
+  "pages.faq.issues.optifine.title": "How to install OptiFine without launching the original Minecraft Launcher?",
+  "pages.faq.issues.optifine.description": "",
+  "pages.faq.issues.skins.title": "How to set your skin?",
+  "pages.faq.issues.skins.description": "",
+  "pages.faq.issues.microsoft-invalid-login.title": "https://t.me/freesmsupport/184",
+  "pages.faq.issues.microsoft-invalid-login.description": "",
+  "pages.faq.issues.no-languages.title": "Why is there only an english language in the launcher?",
+  "pages.faq.issues.no-languages.description": "",
+  "pages.faq.issues.cat-pack-quality.title": "",
+  "pages.faq.issues.cat-pack-quality.description": "",
+  "pages.faq.issues.other.title": "Other issues",
+  "pages.faq.issues.other.description": "Check https://prismlauncher.org/wiki/overview/frequent-issues/ If nothing helped, try contacting us at discord or telegram",
   "footer.short-description": "Играйте в Майнкрафт без ограничений.",
   "footer.about.title": "О лаунчере",
   "footer.about.link.contribute": "Внести вклад",
