--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -1,46 +1,63 @@
 {
   "pages.not-found.title": "اوه!",
-  "pages.not-found.subtitle": "صفحه یافت نشد",
-  "pages.not-found.description": ".صفحه ای که به دنبال آن هستید ممکن است حذف، یا نام آن تغییر و یا به طور موقت خارج از دسترس باشد",
+  "pages.not-found.subtitle": "صفحه یافت نشد.",
+  "pages.not-found.description": ".صفحه ای که به دنبال آن هستید ممکن است حذف، یا نام آن تغییر و یا به طور موقت خارج از دسترس باشد.",
   "pages.not-found.go-to-home": "رفتن به خانه",
   "routes.home.name": "خانه",
-  "routes.downloads.name": "بارگیری ها",
+  "routes.downloads.name": "بارگیری‌ها",
   "routes.faq.name": "سوالات متداول",
-  "routes.themes.name": "تم ها",
-  "general.other": "موارد دیگر",
+  "routes.themes.name": "تم‌ها",
+  "general.other": "سایر موارد",
   "pages.home.hero.title": "بارگیری لانچر فریزم",
-  "pages.home.hero.description": "لانچر فریزم به شما اجازه می دهد تا بدون هیچ گونه محدودیتی بتوانید با اکانت افلاین بازی کنید",
+  "pages.home.hero.description": "لانچر فریزم به شما اجازه می دهد تا بدون هیچ گونه محدودیتی بتوانید با اکانت آفلاین بازی کنید.",
   "pages.home.hero.download-now": "همین حالا دانلود کنید",
   "pages.home.features.more-auth-servers.title": "سرور های احراز هویت بیشتر",
-  "pages.home.features.more-auth-servers.description": "بدون هیچ گونه محدودیتی با اکانت آفلاین یا از سرور های شخصی احراز هویت مانند «Ely.by استفاده کنید. ",
+  "pages.home.features.more-auth-servers.description": "بدون هیچ گونه محدودیتی با اکانت آفلاین یا از سرور های شخصی احراز هویت مانند «Ely.by» استفاده کنید. ",
   "pages.home.features.customization.title": "شخصی سازی",
-  "pages.home.features.customization.description": " فریزم داری تم خود با رنگ «Fluent» و ایکون «catppuccin» مایکروسافت خود است، مچنین به شما اجازه میدهد بسته‌های گربه متحرک را با پشتیبانی از برش پس‌زمینه تنظیم کنید.",
+  "pages.home.features.customization.description": " فریزم دارای تم خود با رنگ «catppuccin» و آیکون «Fluent» مایکروسافت است، همچنین به شما اجازه می دهد بسته‌های گربه متحرک را با پشتیبانی از برش پس‌زمینه تنظیم کنید.",
   "pages.home.features.prism.title": "بر پایه پریزم",
-  "pages.home.features.prism.description": "فریزم بر پایه کد پریزم لانچر ساخته شده است، بنابراین می تواند انتظار تمامی قابلیت های پریزم، مانند مدیریت مودپک ها و نمایه ها رو داشته باشید",
-  "pages.home.features.other.title": "قابلیت های دیگر",
-  "pages.home.features.other.description": "به طور خودکار از اسکرین‌شات‌های درون بازی در تاریخچه بافر خود کپی کنید، نمایه فعلی خود را در دیسکورد نشان دهید، با اسکین های Ely.by در هر جایی بازی کنید و موارد بیشتر!",
+  "pages.home.features.prism.description": "فریزم بر پایه کد پریزم لانچر ساخته شده است، بنابراین می تواند انتظار تمامی قابلیت‌های پریزم، مانند مدیریت مودپک‌ها و نمایه‌ها را داشته باشید",
+  "pages.home.features.other.title": "قابلیت‌های دیگر",
+  "pages.home.features.other.description": "به طور خودکار از اسکرین‌شات‌های درون بازی در تاریخچه بافر خود کپی کنید، نمایه در حال بازی خود را در دیسکورد نشان دهید، با اسکین‌های «Ely.by» در هر جایی بازی کنید و موارد بیشتر!",
   "pages.home.team.maintainers.title": "نگهدارندگان",
-  "pages.home.team.maintainers.list.so5iso4ka.description": "C++ علاقه‌مند به",
-  "pages.home.team.maintainers.list.kaeeraa.description": "حل کننده مشکلات در قلب, علاقه مند به لینوکس «NixOS» و برنامه های متن باز .",
-  "pages.home.team.maintainers.list.s0me1newithhand7s.description": "علاقه‌مند به نرم‌افزار متن‌باز، خالق ایده. نگهدارنده چیزهای  که با نام  نیز شناخته می‌شود",
-  "pages.home.team.maintainers.list.windstone.description": "عاشق Vue.js، Svelte 5 و Elysia.js <3",
+  "pages.home.team.maintainers.list.so5iso4ka.description":" علاقه مند به ++C",
+  "pages.home.team.maintainers.list.kaeeraa.description": "حل کننده مشکلات در قلب, علاقه مند به لینوکس «NixOS» و برنامه‌های متن باز .",
+  "pages.home.team.maintainers.list.s0me1newithhand7s.description": "علاقه‌مند به نرم‌افزار متن‌باز (OSS)، خالق ایده، نگه‌دارنده‌ی پروژه‌های مربوط به Nix، که با نام hand7 هم شناخته می‌شود.",
+  "pages.home.team.maintainers.list.windstone.description": "عاشق Vue.jsو Svelte 5 و Elysia.js، ",
   "pages.home.team.contributors.title": "مشارکت کنندگان",
   "pages.home.team.special.title": "با تشکر ویژه از",
   "pages.downloads.title": "Downloads",
-  "pages.downloads.description": "Download Freesm Launcher %s for your specific platform.",
+  "pages.downloads.description": "Download %s for your specific platform.",
   "pages.faq.title": "Frequently Asked Questions",
+  "pages.faq.description": "",
+  "pages.faq.issues.long-launch.title": "My instance takes so long to launch",
+  "pages.faq.issues.long-launch.description": "",
+  "pages.faq.issues.portable-zip.title": "'Java checker could not be found. Please check your installation'",
+  "pages.faq.issues.portable-zip.description": "",
+  "pages.faq.issues.optifine.title": "How to install OptiFine without launching the original Minecraft Launcher?",
+  "pages.faq.issues.optifine.description": "",
+  "pages.faq.issues.skins.title": "How to set your skin?",
+  "pages.faq.issues.skins.description": "",
+  "pages.faq.issues.microsoft-invalid-login.title": "https://t.me/freesmsupport/184",
+  "pages.faq.issues.microsoft-invalid-login.description": "",
+  "pages.faq.issues.no-languages.title": "Why is there only an english language in the launcher?",
+  "pages.faq.issues.no-languages.description": "",
+  "pages.faq.issues.cat-pack-quality.title": "",
+  "pages.faq.issues.cat-pack-quality.description": "",
+  "pages.faq.issues.other.title": "Other issues",
+  "pages.faq.issues.other.description": "Check https://prismlauncher.org/wiki/overview/frequent-issues/ If nothing helped, try contacting us at discord or telegram",
   "footer.short-description": "راهی دیگر برای بازی کردن ماینکرفت",
   "footer.about.title": "درباره",
   "footer.about.link.contribute": "مشارکت",
   "footer.about.link.faq": "سوالات متداول",
   "footer.about.link.download": "بارگیری",
-  "footer.community.title": "اجتماع",
-  "footer.community.link.telegram-channel": "چنل تلگرام",
+  "footer.community.title": "جامعه",
+  "footer.community.link.telegram-channel": "کانال تلگرام",
   "footer.community.link.telegram-chat": "گپ تلگرام",
-  "footer.community.link.follow-on-github": "دنبلا کردن در گیت هاب",
+  "footer.community.link.follow-on-github": "دنبال کردن در گیت‌هاب",
   "footer.project.title": "پروژه",
   "footer.project.source-code": "کد منبع",
-  "footer.project.github-issues": "مسائل گیت هاب",
+  "footer.project.github-issues": "مسائل گیت‌هاب",
   "footer.project.website": "کد وبسایت",
   "launcher.add-instance": "اضافه کردن کپی",
   "launcher.folders": "پوشه ها",
@@ -66,7 +83,7 @@
   "launcher.delete": "Delete",
   "launcher.create-shortcut": "Create Shortcut",
   "launcher.rename": "تغییر نام",
-  "launcher.change-icon": "تغییر ایکن",
+  "launcher.change-icon": "تغییر آیکن",
   "launcher.confirm-deletion.title": " تائید حذف شدن ",
   "launcher.confirm-deletion.description": "You are about to delete «%s».\nThis may be permanent and will completely delete the instance.\n\nAre you sure?",
   "launcher.yes": "Yes",
