--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -28,6 +28,7 @@
   "pages.home.team.special.title": "Specjalne podziękowania",
   "pages.downloads.title": "Downloads",
   "pages.downloads.description": "Download %s for your specific platform.",
+  "pages.downloads.recommended": "Recommended",
   "pages.faq.title": "Frequently Asked Questions",
   "pages.faq.description": "A collection of helpful information for frequent problems when using Freesm Launcher.",
   "pages.faq.issues.long-launch.title": "Instance launching problems",
