--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -26,8 +26,9 @@
   "pages.home.team.maintainers.list.windstone.description": "Svelte/Vue.js & Elysia.js <3",
   "pages.home.team.contributors.title": "Внесли вклад",
   "pages.home.team.special.title": "Особая благодарность",
-  "pages.downloads.title": "Downloads",
-  "pages.downloads.description": "Download %s for your specific platform.",
+  "pages.downloads.title": "Загрузки",
+  "pages.downloads.description": "Скачайте %s под Вашу операционную систему.",
+  "pages.downloads.recommended": "Рекомендуемая сборка",
   "pages.faq.title": "Frequently Asked Questions",
   "pages.faq.description": "A collection of helpful information for frequent problems when using Freesm Launcher.",
   "pages.faq.issues.long-launch.title": "Instance launching problems",
