feat(translations): add more translations

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -29,10 +29,10 @@
   "pages.downloads.title": "Загрузки",
   "pages.downloads.description": "Скачайте %s под Вашу операционную систему.",
   "pages.downloads.recommended": "Рекомендуемая сборка",
-  "pages.faq.title": "Frequently Asked Questions",
-  "pages.faq.description": "A collection of helpful information for frequent problems when using Freesm Launcher.",
-  "pages.faq.issues.long-launch.title": "Instance launching problems",
-  "pages.faq.issues.long-launch.description": "Try enabling or disabling your VPN or <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>. If it didn't work, try changing your Java vendor or version in settings.",
+  "pages.faq.title": "Частые вопросы",
+  "pages.faq.description": "Полезная информация по Freesm Launcher.",
+  "pages.faq.issues.long-launch.title": "Проблемы с запуском майнкрафта",
+  "pages.faq.issues.long-launch.description": "Попробуйте включить или выключить Ваш VPN или <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>. Если не помогло, попробуйте поменять вашу Java на другую.",
   "pages.faq.issues.no-versions-available.title": "'No versions are currently available'",
   "pages.faq.issues.no-versions-available.description": "Try enabling or disabling your VPN or <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>. If it didn't work, try putting <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>https://meta.multimc.org/v1/</span><span class='select-none'> </span>in Settings -> APIs -> Metadata Server.",
   "pages.faq.issues.portable-zip.title": "'Java checker could not be found. Please check your installation'",
