feat: translate faq to russian

--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -26,9 +26,9 @@
   "pages.home.team.maintainers.list.windstone.description": "Svelte/Vue.js & Elysia.js <3",
   "pages.home.team.contributors.title": "Ті, хто зробили внесок",
   "pages.home.team.special.title": "Особлива подяка",
-  "pages.downloads.title": "Downloads",
-  "pages.downloads.description": "Download %s for your specific platform.",
-  "pages.downloads.recommended": "Recommended",
+  "pages.downloads.title": "Завантаження",
+  "pages.downloads.description": "Завантажте %s для вашої операційної системи.",
+  "pages.downloads.recommended": "Рекомендовано",
   "pages.faq.title": "Frequently Asked Questions",
   "pages.faq.description": "A collection of helpful information for frequent problems when using Freesm Launcher.",
   "pages.faq.issues.long-launch.title": "Instance launching problems",
