feat: add themes page initial content

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -49,6 +49,8 @@
   "pages.faq.issues.cat-pack-quality.description": "Исправим в будущем ^.^",
   "pages.faq.issues.other.title": "Ничего не помогло/Другие проблемы",
   "pages.faq.issues.other.description": "Посмотрите <a class='underline' href='https://prismlauncher.org/wiki/overview/frequent-issues' target='_blank'>Prism Launcher FAQ</a> или напишите нам в <a class='underline' href='https://discord.com/invite/6jjw4gjy4w' target='_blank'>Discord</a> или <a class='underline' href='https://t.me/freesmsupport' target='_blank'>Telegram</a>.",
+  "pages.themes.title": "",
+  "pages.themes.description": "",
   "footer.short-description": "Играйте в Майнкрафт без ограничений.",
   "footer.about.title": "О лаунчере",
   "footer.about.link.contribute": "Внести вклад",
