--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -37,18 +37,20 @@
   "pages.faq.issues.no-versions-available.description": "Try enabling or disabling your VPN or <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>. If it didn't work, try putting <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>https://meta.multimc.org/v1/</span><span class='select-none'> </span>in Settings -> APIs -> Metadata Server.",
   "pages.faq.issues.portable-zip.title": "'Java checker could not be found. Please check your installation'",
   "pages.faq.issues.portable-zip.description": "You probably downloaded a portable version of the launcher and didn't unzip/unarchive it.",
-  "pages.faq.issues.optifine.title": "How to install OptiFine without launching the original Minecraft Launcher?",
+  "pages.faq.issues.optifine.title": "How to install OptiFine without a mod loader?",
   "pages.faq.issues.optifine.description": "<a class='text-sm underline' target='_blank' href='https://www.reddit.com/r/Optifine/comments/jekh7u/comment/ipjqm5o/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button'>Original</a>\n\nExample for 1.8.9:\n* Go into <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>\\FreesmLauncher\\libraries\\com\\mojang\\minecraft\\1.8.9\\</span><span class='select-none'> </span>and copy the minecraft jar file\n* Make a new folder directory <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>%appdata%\\.minecraft\\versions\\1.8.9\\</span><span class='select-none'> </span>and paste the jar in there\n* Then rename the jar you just pasted to 1.8.9.jar\n* Try extracting it and put the extracted file into <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>\\FreesmLauncher\\libraries\\com\\mojang\\minecraft\\1.8.9\\</span>\n",
   "pages.faq.issues.skins.title": "How to set a skin?",
   "pages.faq.issues.skins.description": "Try using an <a class='underline' target='_blank' href='https://ely.by/'>Ely.by</a> skins system, or install a mod that allows you to change in-game skins.",
   "pages.faq.issues.microsoft-invalid-login.title": "'status': 'NOT_ENTITLED'",
-  "pages.faq.issues.microsoft-invalid-login.description": "Don't sign in using a Microsoft account if you didn't buy the game. You need to use an 'Offline'/'Ely.by' option in account settings in this case.",
+  "pages.faq.issues.microsoft-invalid-login.description": "Don't sign in using a Microsoft account if you didn't buy the game. You need to use an 'Offline'/'Ely.by' option in account settings in this case (servers will still work).",
   "pages.faq.issues.no-languages.title": "Why is there only an english language in the launcher?",
   "pages.faq.issues.no-languages.description": "Try enabling or disabling your VPN or <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>.",
   "pages.faq.issues.cat-pack-quality.title": "My cat packs have a bit lower quality when using them in Freesm",
-  "pages.faq.issues.cat-pack-quality.description": "Will be fixed in the future.",
+  "pages.faq.issues.cat-pack-quality.description": "Will be fixed in the future ^.^",
   "pages.faq.issues.other.title": "Still doesn't work/Other issues",
   "pages.faq.issues.other.description": "Check <a class='underline' href='https://prismlauncher.org/wiki/overview/frequent-issues' target='_blank'>Prism Launcher FAQ</a> or try contacting us at <a class='underline' href='https://discord.com/invite/6jjw4gjy4w' target='_blank'>Discord</a> or <a class='underline' href='https://t.me/freesmsupport' target='_blank'>Telegram</a>.",
+  "pages.themes.title": "",
+  "pages.themes.description": "",
   "footer.short-description": "Inny sposób na darmową grę w Minecrafta.",
   "footer.about.title": "O projekcie",
   "footer.about.link.contribute": "Contribute",
